[gd_scene load_steps=3 format=3 uid="uid://b7ursrw4o2ydv"]

[ext_resource type="Theme" uid="uid://bwa01eckmt4sl" path="res://themes/menus.tres" id="1_ejwgg"]
[ext_resource type="Script" uid="uid://c8wflgupki0fa" path="res://ui/pause_menu.gd" id="2_fob5h"]

[node name="PauseMenu" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ejwgg")
script = ExtResource("2_fob5h")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.5
offset_top = -33.0
offset_right = 37.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "REPRENDRE"

[node name="ReloadButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "RELANCER"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "QUITTER"

[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ReloadButton" to="." method="_on_reload_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
